<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDressActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    >

    <TextView
        android:id="@+id/dressURL_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_image_url"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginTop="@dimen/image_url_tv_marginTop"
        android:layout_marginStart="@dimen/view_margin"
        />
    <EditText
        android:id="@+id/image_url_et"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/dressURL_tv"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginLeft="@dimen/edit_text_marginleft"
        android:layout_marginTop="@dimen/view_margin"
        android:hint="@string/enter_image_url"
        android:layout_marginStart="@dimen/edit_text_marginleft"
        android:layout_marginEnd="@dimen/view_margin"
        />
    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_description"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/desc_tv_marginTop"
        android:layout_below="@+id/dressURL_tv"
        />
    <EditText
        android:id="@+id/description_et"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/description_tv"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginLeft="@dimen/edit_text_marginleft"
        android:layout_marginStart="@dimen/edit_text_marginleft"
        android:layout_marginEnd="@dimen/view_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_below="@+id/image_url_et"
        android:contentDescription="@string/enter_description"
        />
    <TextView
        android:id="@+id/wieght_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_wieght"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/weight_tv_marginTop"
        android:layout_below="@+id/description_tv"
        />
    <EditText
        android:id="@+id/weight_et"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/wieght_tv"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginLeft="@dimen/edit_text_marginleft"
        android:layout_marginStart="@dimen/edit_text_marginleft"
        android:layout_marginEnd="@dimen/view_margin"
        android:layout_below="@+id/description_et"
        android:layout_marginTop="@dimen/view_margin"
        android:contentDescription="@string/enter_wieght"
        />
    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_price"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginTop="@dimen/price_tv_marginTop"
        android:layout_below="@+id/wieght_tv"
        android:layout_marginStart="@dimen/view_margin"
        />
    <EditText
        android:id="@+id/price_et"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/price_tv"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin"
        android:layout_marginLeft="@dimen/edit_text_marginleft"
        android:layout_marginStart="@dimen/edit_text_marginleft"
        android:layout_below="@+id/weight_et"
        android:layout_marginTop="@dimen/view_margin"
        android:contentDescription="@string/enter_price"
        />
    <TextView
        android:id="@+id/contact_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_contact_info"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginTop="@dimen/contact_info_tv_marginTop"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_below="@+id/price_tv"
        />
    <EditText
        android:id="@+id/contact_info_et"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/contact_info_tv"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin"
        android:layout_below="@+id/price_et"
        android:layout_marginTop="@dimen/view_margin"
        android:contentDescription="@string/enter_contact_info"
        />
    <Button
        android:id="@+id/save_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/view_margin"
        android:text="@string/save"
        android:contentDescription="@string/save_new_dress"/>

</RelativeLayout>
</ScrollView>