<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flowerimagebackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_bar_hight"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginTop="@dimen/toolbare_margin_top"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_bar_text"
                android:textColor="@color/button_Color"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:gravity="center_horizontal|center_vertical"
                android:textAllCaps="true"
                />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flowerimagebackground"
        android:orientation="vertical"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:focusable="true"
            >

            <Button
                android:id="@+id/wedding_bt_id"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_hieght"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_weight="1"
                android:background="@color/button_Color"
                android:singleLine="true"
                android:text="@string/wedding_bt_text"
                android:contentDescription="@string/move_to_wedding_list"
                />

            <Button
                android:id="@+id/casual_bt_id"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_hieght"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_weight="1"
                android:background="@color/button_Color"
                android:text="@string/casual_bt_text"
                android:contentDescription="@string/move_to_casual_list"
                />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>